created fuse layout, media-query, and color styles

--- a/styles/mixins/color.sass
+++ b/styles/mixins/color.sass
@@ -1,5 +1,5 @@
-@import "./config/color"
-@import "./utilities/str"
+@import "../config/color"
+@import "../functions/str"
 
 // ---------------------------
 // Color Setter
