--- a/styles/mixins/media.sass
+++ b/styles/mixins/media.sass
@@ -1,6 +1,5 @@
-@import "./config/media"
-@import "./utilities/str"
-@import "./utilities/list"
+@import "../config/media"
+@import "../functions/*"
 
 // Breakpoints
 // sizes:   xs, sm, md, lg, xl
