improved source comments

--- a/src/elements/button.sass
+++ b/src/elements/button.sass
@@ -1,4 +1,4 @@
-%button 
+%button
   display: inline-block
   line-height: 1.25
   justify-content: center
@@ -8,9 +8,8 @@
   transition: all .2s ease-in-out
   border: .25rem solid transparent
 
-  // types
-    // submit
-    // link
+  // TODO types
+  // submit button, link button
 
   // modifiers
   %is-active
