--- a/src/mixins/color.sass
+++ b/src/mixins/color.sass
@@ -1,18 +1,53 @@
-@import "../config/color"
 @import "../functions/str"
+@import "./utils/palettes.scss"
+
+// -------------------------------
+//  Config Variables
+// -------------------------------
+
+// Theme
+$primary: 'red' !default
+$accent: 'light-blue' !default
+
+// Containers
+$background: "grey" !default
+$foreground: "foreground-dark" !default
+
+// Notifications
+$info: 'blue' !default
+$success: 'green' !default
+$warning: 'yellow' !default
+$danger: 'red' !default
+
+// Setup Color Scheme Map
+$default-hue: '500' !default
+$color-scheme: ('primary': $primary, 'accent': $accent, 'info': $info, 'success': $success, 'warning': $warning, 'danger': $danger) !default
+
 
 // ---------------------------
-// Color Setter
+// Color Mixin
 // ---------------------------
-// TODO improve color contrast options
-// TODO improve outline options
+
+// Color
+// @summary sets a combination of background, text, and border color
+//
+// @param {color} [<color>, <color + hue>]
+// @param {contrast-type} ['is-inverted', 'is-outlined']
+//
+// @examples
+//   color('accent')
+//   color('primary 400', 'is-outlined')
+//   
 @mixin color($args...)
-  $color: 'primary'
-  $hue: $default-hue
-  $is-outlined: false
-  $is-inverted: false
-  $color-main: null
-  $color-contrast: null
+  // data to get color from color scheme
+  $color: 'primary' !default
+  $hue: $default-hue !default
+  // data to set color contrast
+  $is-outlined: false !default
+  $is-inverted: false !default
+  // output colors
+  $color-main: null !default
+  $color-contrast: null !default
 
   // override passed params
   @each $arg in $args
@@ -39,6 +74,7 @@
     $color-main: get-color($color, $hue)
     $color-contrast: get-color($color, 'contrast')
 
+  // set colors
   @if $is-inverted
     background-color: $color-contrast
     color: $color-main
@@ -50,7 +86,12 @@
     @if $is-outlined
       border: 1px solid $color-contrast
 
+//--------------------------
+//  Helper Functions
+//--------------------------
 
+// Get Color
+// @summary given a color and hue, gets color from color scheme map
 @function get-color($color, $hue: $default-hue)
   $curr_color: map-get($colors, $color)
 
