--- a/src/mixins/media.sass
+++ b/src/mixins/media.sass
@@ -1,5 +1,8 @@
-@import "../config/media"
 @import "../functions/*"
+
+// -------------------------------
+// Config Variables
+// -------------------------------
 
 // Breakpoints
 // sizes:   xs, sm, md, lg, xl
@@ -7,32 +10,41 @@
 $breakpoints: (xs: 0, sm: 544px, md: 768px, lg: 992px, xl: 1200px, phone: 544px, tablet: 768px, desktop: 992px) !default
 
 // Expressions
-//  handheld, landscape, portraint, retina 2x, retina 3x
+// handheld, landscape, portraint, retina 2x, retina 3x
 $media-expressions: (screen: 'screen', print: 'print', handheld: 'handheld', landscape: 'orientation: landscape', portrait: 'orientation: portrait', retina2x: 'min-resolution: 192dpi, min-resolution: 2dppx', retina3x: 'min-resolution: 350dpi, min-resolution: 3dppx') !default
 
 // Unit Intervals
 // amount to add or subtract when declaring breakpoints with exclusive intervals
 $unit-intervals: ('': 0, 'px': 1, 'em': 0.01, 'rem': 0.1) !default
 
-// -------------------
-//  Media
-// ------------------
-// TODO media-expressions[query]
-// media-expressions have no operator and we can just return value
+// -------------------------------
+//  Media Mixin
+// -------------------------------
 
-// TODO accept numbers not just values in map
-
-// TODO accept more than one logical operator
-// make args into $list
-// e.g. 'phone' 'desktop', 'or'
+// Media
+//
+// @param {conditions}[<operator + breakpoint>]
+//
+// @example
+//   media('>=phone', '<lg')
+//
 @mixin media($conditions...)
+  // TODO allow 'or' operator
   $keyword: 'and'
+  // convert conditions into into valid media queries
+  // and  seperate them by appropriate logical operator
   $queries: list-separate(list-apply('to-query', $conditions), $keyword)
   @media #{$queries}
     @content
 
+//--------------------------
+//  Helper Functions
+//--------------------------
 
+// To Query
+// @summary converts condition into a media query
 @function to-query($condition, $args...)
+  // defaults
   $dimension: 'width'
   $operatior: null
 
@@ -41,21 +53,24 @@ $unit-intervals: ('': 0, 'px': 1, 'em': 0.01, 'rem': 0.1) !default
   $valid-operators: join(('>=', '≥', '>'), ('<=', '≤', '<'))
 
   // get property prefix and suffix
-  // e.g. height>= -> min and width
+  // e.g. >=height --> min and width
   $operator: str-extract($condition, $valid-operators)
   $direction: if(index(('>=', '≥', '>'), $operator), 'min', 'max')
   $dimension: if(str-index($condition, 'height'), 'height', 'width')
 
   // get value
-  // e.g. phone -> 200px
-  $from-operator: substr-last-char($condition, $operator)
+  // e.g. phone --> 200px
+  $from-operator: str-last-index($condition, $operator)
   $bp-key: str-slice($condition, $from-operator + 1)
   $bp-value: map-get($breakpoints, $bp-key)
 
   // set rule
-  // e.g. >=phone -> (min-width: 200px)
+  // e.g. >=phone --> (min-width: 200px)
   @return '(#{$direction}-#{$dimension}: #{$bp-value})'
 
+
+// Get Keyword
+// @summary given a media query operator, returns a media query seperator
 @function get-keyword($word)
   @if $word == 'or'
     @return ','
