--- a/src/main.sass
+++ b/src/main.sass
@@ -1,3 +1,3 @@
-@import "./functions/*"
-@import "./mixins/*"
-@import "./elements/*"
+@import "functions/*"
+@import "mixins/*"
+@import "elements/*"
