--- a/src/mixins/*.sass
+++ b/src/mixins/*.sass
@@ -1,4 +1,4 @@
-@import "./color"
-@import "./layout"
-@import "./media"
-@import "./size"
+@import "color"
+@import "layout"
+@import "media"
+@import "size"
